@@ -2,7 +2,7 @@ New Features and Important Changes in GammaLib 1.1.0
 
 Author(s) : Juergen Knoedlseder
 
-14 March 2016
+16 March 2016
 
 
 1. Introduction
@@ -14,6 +14,7 @@ made since the last release of GammaLib.
 2. Public interface modifications
 ---------------------------------
 The following methods have been added to the public interface:
+- GApplication::logFileClose()
 - GObservation::events() (non-const variant)
 - GObservations::nobserved()
 - GFilename::operator std::string()
@@ -106,6 +107,10 @@ None
 ---------------------
 The GApplicationPar::filename() methods now take and return GFilename objects
 instead of std::string objects (#1671).
+
+A GApplication::logFileClose() method has been added to force writing the
+trailer and closing the log file. This is primarily useful for usage in
+Python where the desctructor is not always called.
 
 
 5. Base module
